--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "should": "^11.1.2",
     "should-sinon": "0.0.5",
     "sinon": "^1.17.7",
+    "standard": "^8.6.0",
     "xo": "^0.16.0"
   }
 }
