--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Cloud Formation for Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "standard && mocha"
+    "test": "standard && istanbul cover _mocha",
+    "ci": "standard && istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
