--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
-    "node-uuid": "^1.4.7",
     "should": "^11.1.2",
     "should-sinon": "0.0.5",
     "sinon": "^1.17.7",
-    "standard": "^8.6.0"
+    "standard": "^8.6.0",
+    "uuid": "^3.0.1"
   }
 }
